Finished write up and discussion section

--- a/Project write-up.ipynb
+++ b/Project write-up.ipynb
@@ -2877,9 +2877,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ca3f1d16-9bfd-4fb7-a074-a2e17d270184",
+   "metadata": {},
+   "source": [
+    "## Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7547850f-d6f9-4544-9083-51df0e5b91fe",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "source": [
+    "As seen in figure 1 proportion of subscriptions with experience did not show any definitive results as every level had around the same proportions with minor differences. In conclusion no clear pattern was shown between subscription proportions and experience. Figure 2 shows us that majority players playing 10 hours of less were subscribed with very minimal players with no subscriptions. But figure 3 shows us that all players who play between 10-200 hours were all subscribed. The two results show that the more hours played the more likely the player has subscribed.\n",
+    "\n",
+    "The accuracy of our classifier was 70% but to further determine the quality of our classifier we need to compute the precision and recall which can be done from the confusion matrix above. Precision was calculated to be 77% and recall was 84%. \n",
+    "\n",
+    "This is not what I was expecting as I predicted that these variables are good predictors. \n",
+    "\n",
+    "The impact of these findings is unknown as there were no significant progress in adressing the broad questions researchers were looking for. Experience showed no significant relation to subscribing and hours played had no impactful results. \n",
+    "\n",
+    "For future studies it is recommended to research what factors contribute to the willingness of players to subscribe as that could help gain a deeper understanding of what our results showed in this analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e842f337-251d-41e2-ae06-437d1bf49354",
+   "id": "c6324e85-8716-4462-9a15-0899a72bb899",
    "metadata": {},
    "outputs": [],
    "source": []
